Bug 898721-[Helix]when view picture in mms,the font of title is too big

--- a/apps/gallery/style/open.css
+++ b/apps/gallery/style/open.css
@@ -6,7 +6,7 @@ html {
   padding: 0;
   margin: 0;
   overflow: hidden;
-  font-size: 1rem;
+  font-size: 10px;
 }
 
 body {
